--- a/build.gradle
+++ b/build.gradle
@@ -1,35 +1,34 @@
-buildscript {
-    repositories {
-        maven { url "https://plugins.gradle.org/m2/" }
-        maven { url = 'https://files.minecraftforge.net/maven' }
-        mavenCentral()
-        maven { url "https://repo.spongepowered.org/maven/" }
-    }
-    dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
-        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
-    }
-}
+//buildscript {
+//    repositories {
+//        maven { url "https://plugins.gradle.org/m2/" }
+//        maven { url = 'https://files.minecraftforge.net/maven' }
+//        mavenCentral()
+//        maven { url "https://repo.spongepowered.org/maven/" }
+//    }
+//    dependencies {
+//        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
+//        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+//    }
+//}
 
 plugins {
-    id 'com.github.johnrengelman.shadow' version '4.0.4'
+//    id 'com.github.johnrengelman.shadow' version '4.0.4'
+    id 'eclipse'
+    id 'idea'
+    id 'maven-publish'
+    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
+    id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
 }
-
-apply plugin: 'net.minecraftforge.gradle'
-// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
-apply plugin: 'eclipse'
-apply plugin: 'maven-publish'
-apply plugin: 'org.spongepowered.mixin'
 
 version = '1.16.5-0.1.68-B' + getVersionNumber()
 group = 'com.ticticboooom.mods.mm' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'MasterfulMachinery'
 java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.
 
-configurations {
-    shade
-    compile.extendsFrom shade
-}
+//configurations {
+//    shade
+//    compile.extendsFrom shade
+//}
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
@@ -133,9 +132,9 @@ minecraft {
     }
 }
 
-shadowJar {
-    configurations = [project.configurations.shade]
-}
+//shadowJar {
+//    configurations = [project.configurations.shade]
+//}
 
 
 repositories {
@@ -207,9 +206,9 @@ dependencies {
 
     runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.16.4-51")
 
-    implementation "dev.latvian.mods:rhino:1605.1.0-build.4"
-    implementation fg.deobf("me.shedaniel:architectury-forge:v1.15.13")
-    implementation fg.deobf("dev.latvian.mods:kubejs-forge:1605.3.10-build.8")
+//    implementation "dev.latvian.mods:rhino:1605.1.0-build.4"
+//    implementation fg.deobf("me.shedaniel:architectury-forge:v1.15.13")
+//    implementation fg.deobf("dev.latvian.mods:kubejs-forge:1605.3.10-build.8")
     // You may put jars on which you depend on in ./libs or you may define them like so..
     // compile "some.group:artifact:version:classifier"
     // compile "some.group:artifact:version"
@@ -248,7 +247,7 @@ jar {
 
 // Example configuration to allow publishing using the maven-publish task
 // This is the preferred method to reobfuscate your jar file
-jar.finalizedBy('reobfShadowJar')
+jar.finalizedBy('reobfJar')
 // However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
 //publish.dependsOn('reobfJar')
 
@@ -265,12 +264,12 @@ publishing {
     }
 }
 
-reobf {
-    shadowJar {
-        dependsOn createMcpToSrg
-        mappings = createMcpToSrg.outputs.files.singleFile
-    }
-}
+//reobf {
+//    shadowJar {
+//        dependsOn createMcpToSrg
+//        mappings = createMcpToSrg.outputs.files.singleFile
+//    }
+//}
 
 def getVersionNumber() {
     def vFile = file('version.properties')
@@ -294,13 +293,13 @@ mixin {
 }
 
 artifacts {
-    archives shadowJar
-    shadow shadowJar
+//    archives shadowJar
+//    shadow shadowJar
 }
 
-reobf {
-    shadowJar {
-        dependsOn createMcpToSrg
-        mappings = createMcpToSrg.outputs.files.singleFile
-    }
-}
+//reobf {
+//    shadowJar {
+//        dependsOn createMcpToSrg
+//        mappings = createMcpToSrg.outputs.files.singleFile
+//    }
+//}
